split stratum manager and tasks in several files

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -43,7 +43,10 @@ SRCS
     "./http_server/handler_file.cpp"
     "./http_server/handler_ota_factory.cpp"
     "./self_test/self_test.cpp"
-    "./tasks/stratum_task.cpp"
+    "./stratum/stratum_task.cpp"
+    "./stratum/stratum_manager.cpp"
+    "./stratum/stratum_manager_fallback.cpp"
+    "./stratum/stratum_manager_dual_pool.cpp"
     "./tasks/create_jobs_task.cpp"
     "./tasks/asic_result_task.cpp"
     "./tasks/influx_task.cpp"
