--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -4,6 +4,7 @@ SRCS
     "nvs_config.cpp"
     "system.cpp"
     "sntp.cpp"
+    "utils.cpp"
     "boards/board.cpp"
     "boards/nerdaxe.cpp"
     "boards/nerdaxegamma.cpp"
@@ -117,34 +118,36 @@ INCLUDE_DIRS
 
 set(WEB_SRC_DIR "${CMAKE_CURRENT_SOURCE_DIR}/http_server/axe-os")
 
-if("$ENV{GITHUB_ACTIONS}" STREQUAL "true")
-    message(STATUS "Running on GitHub Actions. Web ui will be prebuilt.")
+option(BUILD_WEB "Enable web UI build" ON)
 
-    spiffs_create_partition_image(www ${WEB_SRC_DIR}/dist/axe-os FLASH_IN_PROJECT)
-else()
-    find_program(NPM_EXECUTABLE npm)
-    if(NOT NPM_EXECUTABLE AND NOT EXISTS ${WEB_SRC_DIR}/dist)
-        message(FATAL_ERROR "npm is not found! Please install it to proceed.")
+if(BUILD_WEB)
+    message(STATUS "Web UI build enabled")
+
+    if("$ENV{GITHUB_ACTIONS}" STREQUAL "true")
+        spiffs_create_partition_image(www ${WEB_SRC_DIR}/dist/axe-os FLASH_IN_PROJECT)
+    else()
+        find_program(NPM_EXECUTABLE npm)
+        if(NOT NPM_EXECUTABLE AND NOT EXISTS ${WEB_SRC_DIR}/dist)
+            message(FATAL_ERROR "npm is not found! Please install it to proceed.")
+        endif()
+
+        ExternalProject_Add(
+            web_ui_dist
+            PREFIX ${CMAKE_BINARY_DIR}/web_ui_dist
+            SOURCE_DIR ${WEB_SRC_DIR}
+            DOWNLOAD_COMMAND ""
+            CONFIGURE_COMMAND ${NPM_EXECUTABLE} i
+            BUILD_COMMAND ${NPM_EXECUTABLE} run build
+            INSTALL_COMMAND ""
+            BUILD_ALWAYS OFF
+            BUILD_IN_SOURCE TRUE
+        )
+
+        add_dependencies(${COMPONENT_LIB} web_ui_dist)
+
+        spiffs_create_partition_image(www ${WEB_SRC_DIR}/dist/axe-os FLASH_IN_PROJECT DEPENDS web_ui_dist)
     endif()
-
-    ExternalProject_Add(
-        web_ui_dist
-        PREFIX ${CMAKE_BINARY_DIR}/web_ui_dist
-        SOURCE_DIR ${WEB_SRC_DIR}
-        DOWNLOAD_COMMAND ""
-        CONFIGURE_COMMAND
-            ${NPM_EXECUTABLE}  i
-        USES_TERMINAL_BUILD true
-        BUILD_COMMAND
-            ${NPM_EXECUTABLE} run build
-        INSTALL_COMMAND ""
-        BUILD_ALWAYS OFF
-        BUILD_IN_SOURCE TRUE
-        BUILD_BYPRODUCTS
-            "${WEB_SRC_DIR}/dist/axe-os/index.html"
-    )
-
-    add_dependencies(${COMPONENT_LIB} web_ui_dist)
-
-    spiffs_create_partition_image(www ${WEB_SRC_DIR}/dist/axe-os FLASH_IN_PROJECT DEPENDS web_ui_dist)
+else()
+    message(STATUS "Web UI build disabled – using prebuilt dist/ directory.")
+    spiffs_create_partition_image(www ${WEB_SRC_DIR}/dist/axe-os FLASH_IN_PROJECT)
 endif()
