--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -44,6 +44,8 @@ SRCS
     "./http_server/handler_file.cpp"
     "./http_server/handler_ota_factory.cpp"
     "./self_test/self_test.cpp"
+    "./stratum/stratum_api.cpp"
+    "./stratum/stratum_transport.cpp"
     "./stratum/stratum_config.cpp"
     "./stratum/stratum_task.cpp"
     "./stratum/stratum_manager.cpp"
@@ -91,9 +93,8 @@ INCLUDE_DIRS
     "../components/dns_server/include"
     "../components/bm1397/include"
     "../components/influx/include"
-    "../components/stratum/include"
 
-    PRIV_REQUIRES
+REQUIRES
     "app_update"
     "driver"
     "esp_adc"
@@ -104,7 +105,6 @@ INCLUDE_DIRS
     "esp_https_ota"
     "esp_netif"
     "esp_timer"
-    "esp-tls"
     "esp_wifi"
     "esp_lcd"
     "esp_psram"
@@ -114,6 +114,8 @@ INCLUDE_DIRS
     "vfs"
     "lvgl"
     "lwip"
+    "esp-tls"
+
 )
 
 
